k8s/rss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-deployment
  namespace: rss
  labels:
    app: rss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rss
  template:
    metadata:
      labels:
        app: rss
    spec:
      containers:
        - name: rss
          image: service-rss
          imagePullPolicy: Never
          ports:
            - containerPort: 80
