k8s/rss-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-service
  namespace: rss
  labels:
    app: rss
spec:
  selector:
    app: rss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
